--- a/css/global.css
+++ b/css/global.css
@@ -8,6 +8,11 @@
     font-family: 'PalanquinRegular';
 }
 
+* {
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    -webkit-tap-highlight-color: transparent;
+}
+
 html {
 	width: 100%;
 	height: 100%;
