--- a/css/global.css
+++ b/css/global.css
@@ -13,6 +13,12 @@
     -webkit-tap-highlight-color: transparent;
 }
 
+button {
+	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+	-webkit-tap-highlight-color: transparent;
+	outline: none;
+}
+
 html {
 	width: 100%;
 	height: 100%;
