--- a/css/global.css
+++ b/css/global.css
@@ -17,6 +17,14 @@ button {
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 	-webkit-tap-highlight-color: transparent;
 	outline: none;
+	flex-shrink: 0;
+}
+
+input {
+	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+	-webkit-tap-highlight-color: transparent;
+	outline: none;
+	flex-shrink: 0;
 }
 
 html {
